@@ -33,6 +33,8 @@
         r.this <- 1 - invar/totvar
         r <- c(r, r.this)
         if (permutations) {
+            if (permutations %% 100 == 0)
+                permutations <- permutations - 1
             A <- as.integer(P[[i]])
             NL <- nlevels(P[[i]])
             tmp <- rep(NA, permutations)
@@ -45,7 +47,7 @@
                             var = double(1), PACKAGE = "vegan")$var
                 tmp[i] <- 1 - invar/totvar
             }
-            pval.this <- sum(tmp > r.this)/permutations
+            pval.this <- (sum(tmp > r.this) + 1)/(permutations + 1)
             pval <- c(pval, pval.this)
         }
     }
